--- a/Api/templates/admin.html
+++ b/Api/templates/admin.html
@@ -179,20 +179,15 @@
                 <label for="codigo_estudiante">Código Estudiante:</label>
                 <input type="number" id="codigo_estudiante" name="codigo_estudiante" required>
             </div>
-            
-            <div class="form-group">
-                <label for="curp">CURP:</label>
-                <input type="text" id="curp" name="curp" required>
-            </div>
-            
-            <div class="form-group">
-                <label for="calle">Dirección:</label>
-                <input type="text" id="calle" name="calle" required>
-            </div>
-            
+                        
             <div class="form-group">
                 <label for="foto_url">URL de la Foto:</label>
                 <input type="text" name="foto_url" id="foto_url" required>
+            </div>
+
+            <div class="form-group">
+                <label for="gustos">Gustos:</label>
+                <input type="text" id="gustos" name="gustos" required>
             </div>
             
             <button type="submit">Agregar Usuario</button>
