--- a/Api/templates/usuarios.html
+++ b/Api/templates/usuarios.html
@@ -211,9 +211,7 @@
                     <div class="datos-usuario">
                         <p><strong>ID:</strong> <span class="valor-ajustado">{{ usuario.id }}</span></p>
                         <p><strong>Código:</strong> <span class="valor-ajustado">{{ usuario.codigo_estudiante }}</span></p>
-                        <p><strong>CURP:</strong> <span class="valor-ajustado">{{ usuario.curp }}</span></p>
-                        <p><strong>Dirección:</strong> <span class="valor-ajustado">{{ usuario.calle }}</span></p>
-                        
+                        <p><strong>Gustos:</strong> <span class="valor-ajustado">{{ usuario.gustos }}</span></p>  
                         <p>
                             <strong>Archivo:</strong> 
                             <span class="file-path-container">
